sonarr_server/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - env:  
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: TZ
          value: Europe/Zurich
        securityContext:
          privileged: false
        name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: sonarr-config
        - mountPath: /tv
          name: sonarr-tvseries
        - mountPath: /downloads
          name: sonarr-downloads
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
      - name: sonarr-tvseries
        persistentVolumeClaim:
          claimName: sonarr-tvseries-pvc
      - name: sonarr-downloads
        persistentVolumeClaim:
          claimName: sonarr-downloads-pvc
