sonarr_server/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: jellyfin
spec:
  selector:
    app: sonarr
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
